# person-db

./: .env  .env.local  Cargo.toml  MakeFile  README.md  db-init.sql  docker-compose.yaml  dockerfile  nginx.conf  rabbitmq-definitions.json  rabbitmq-init.sh  rabbitmq.conf
src/: controller.rs  main.rs  queue.rs  redis.rs
src/config/: mod.rs  postgres_config.rs  rabbitmq_config.rs  redis_config.rs  server_config.rs  settings.rs
src/data_access/: db.rs  mod.rs  warmup_jobs.rs
