[package]
name = "person-db"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
lapin = "2.5.1"
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
